--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -467,19 +467,29 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 												  		singleSelectOnly: true,
 												   		currentProjectId: $projectsId,
 														});
-														AJS.$('.drop-menu').attr("style","height: 47px; margin-top: 1px;");
-														AJS.$('.issue-picker-popup').attr("style","margin-bottom: 25px;");
+														AJS.$('.drop-menu').attr("style","height: 26px; margin-top: 1px;");
+														AJS.$('.issue-picker-popup').attr("style","margin-bottom: 15px;");
+													
 														#if($isPopup != 1)
-															AJS.$("#issueSelect-multi-select").attr("style","width: 630px;");
-															AJS.$("#issueSelect-textarea").attr("style","width: 630px; height: 50px");
+															#if($jiraMainVersion < 6)
+																AJS.$("#issueSelect-multi-select").attr("style","width: 630px;");
+																AJS.$("#issueSelect-textarea").attr("style","width: 605px; height: 20px");
+															#else
+																AJS.$("#issueSelect-textarea").attr("style","width: 605px; height: 30px");
+															#end
+															
 														#else
-															AJS.$("#issueSelect-multi-select").attr("style","width: 922px;");
-															AJS.$("#issueSelect-textarea").attr("style","width: 930px; height: 50px");
+															#if($jiraMainVersion < 6)
+																AJS.$("#issueSelect-multi-select").attr("style","width: 930px;");
+																AJS.$("#issueSelect-textarea").attr("style","width: 905px; height: 20px");
+															#else
+																AJS.$("#issueSelect-textarea").attr("style","width: 905px; height: 30px");
+															#end
+															
 														#end	
 														//Set the issue key		
 														AJS.$("#issueSelect-textarea").append("$issueKey");
 														AJS.$("#issueSelect-textarea").attr("tabindex","3");
-														
 														
 														ip.handleFreeInput();
 													</script>
