added chart report page

--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -48,6 +48,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	        		<li class="active">
 	            		<a href="JiraTimetrackerWorklogsWebAction!default.jspa"><strong>Missing Days Report</strong></a>
 	        		</li>
+	        		<li>
+	            		<a href="JiraTimetrackerChartWebAction!default.jspa"><strong>Chart Report</strong></a>
+	        		</li>
 	    		</ul>
 	    	</div>
 			##TAB END
