--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -11,7 +11,7 @@ $webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 <div>
 
-<form name="chartReportForm"  method="post" action="JiraTimetrackerChartWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated" />   
+<form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
 	#set($rendererType = "atlassian-wiki-renderer")
 	<div id="plugin_head" class="item-header">
  			<h1 class="item-summary">Timetracker</h1>
