--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -43,6 +43,33 @@
     	color:  #7e7a7a  ;
     }
     
+    .content {
+		margin: 0 .714em .714em;
+		position: relative;
+	}
+    .rounded {
+		background-color: #fff;
+		border: 1px solid #bbb;
+		-moz-border-radius: .4em;
+		-webkit-border-radius: .4em;
+		border-radius: .4em;
+	}
+    .item-header {
+		margin: 12px 12px 0 12px;
+		min-height: 48px;
+		position: relative;
+		padding-left: 5px;
+		padding-right: 5px;
+		padding-top: 0px;
+	}
+	#main-content {
+		min-width: 990px;
+	}
+	.item-header .item-summary {
+		font-size: 2em;
+		line-height: 1.167;
+		margin: 0;
+	}
 </style>
 <script>
 	
@@ -103,10 +130,15 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 					#elseif($isEditAll) action="JiraTimetarckerWebAction.jspa?editAllIds=$editAllIds&dateFormated=$dateFormated" 
 					#else action="JiraTimetarckerWebAction.jspa?dateFormated=$dateFormated" #end/>   
 	#set($rendererType = "atlassian-wiki-renderer")
-	<div id="plugin_head" class="item-header">
- 			<h1 class="item-summary">Timetracker</h1>
+	<div id="plugin_head" class="item-header" style="width:980px;">
+			<div style="float: right;">
+				<a href="http://www.everit.org/components.html#jira" target="_blank">
+					<img src="https://marketplace-cdn.atlassian.com/files/org.everit.jira.timetracker.plugin/icons/default/c71ef872-fd57-4dea-8781-53bd5b4d1a7d.png" alt="Everit logo" height="42" width="42" style:"float: right">
+				</a>
+			</div>
+ 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
   	</div>
-	<div id="main-content" class="content rounded">
+	<div id="main-content" class="content rounded" style="width:970px;">
 		<div style="margin:10px; width:970px;">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
@@ -511,8 +543,8 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 							 	  						  AJS.$("#comments-wiki-edit").attr("style","width: 650px;");
 							 	  						  AJS.$("#comments").attr("style","width: 650px");
 							 	  						#else
-							 	  						  AJS.$("#comments-wiki-edit").attr("style","width: 950px;");
-							 	  						  AJS.$("#comments").attr("style","width: 950px");	
+							 	  						  AJS.$("#comments-wiki-edit").attr("style","width: 100%;");
+							 	  						  AJS.$("#comments").attr("style","width: 100%");	
 							 	  						#end 
 							 	  						AJS.$("#comments").append("$comment");
 							 	  						AJS.$("#comments").attr("tabindex","4");
@@ -591,8 +623,8 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 			#else
 				<input id="Submit"  type="submit" name="submit" value="$i18n.getText('plugin.submit')" class="button" tabindex="5"/>
 			#end
+			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right;"/>
 			<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetarckerWebAction!default.jspa?dateFormated=$dateFormated'" class="button"/>
-			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right; margin-right: 15px;"/>
 			</div>
 		</div>	
 	</div>
