--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -24,6 +24,34 @@
         border:1px solid #D2D2D2;
         padding:4px;
     }
+    
+    .content {
+		margin: 0 .714em .714em;
+		position: relative;
+	}
+    .rounded {
+		background-color: #fff;
+		border: 1px solid #bbb;
+		-moz-border-radius: .4em;
+		-webkit-border-radius: .4em;
+		border-radius: .4em;
+	}
+    .item-header {
+		margin: 12px 12px 0 12px;
+		min-height: 48px;
+		position: relative;
+		padding-left: 5px;
+		padding-right: 5px;
+		padding-top: 0px;
+	}
+	#main-content {
+		min-width: 990px;
+	}
+	.item-header .item-summary {
+		font-size: 2em;
+		line-height: 1.167;
+		margin: 0;
+	}
    
 </style>
 $webResourceManager.requireResource("jira.webresources:global-static")
@@ -34,10 +62,15 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 
 <form name="myForm"  method="post" action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />   
 	#set($rendererType = "atlassian-wiki-renderer")
-	<div id="plugin_head" class="item-header">
- 			<h1 class="item-summary">Timetracker</h1>
+	<div id="plugin_head" class="item-header" style="width:980px;">
+			<div style="float: right;">
+				<a href="http://www.everit.org/components.html#jira" target="_blank">
+					<img src="https://marketplace-cdn.atlassian.com/files/org.everit.jira.timetracker.plugin/icons/default/c71ef872-fd57-4dea-8781-53bd5b4d1a7d.png" alt="Everit logo" height="42" width="42" style:"float: right">
+				</a>
+			</div>
+ 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
   	</div>
-	<div id="main-content" class="content rounded" >
+	<div id="main-content" class="content rounded" style="width:970px;">
 		<div style="margin:10px; width:970px;">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
