--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -133,7 +133,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 	<div id="plugin_head" class="item-header" style="width:980px;">
 			<div style="float: right;">
 				<a href="http://www.everit.org/components.html#jira" target="_blank">
-					<img src="https://marketplace-cdn.atlassian.com/files/org.everit.jira.timetracker.plugin/icons/default/c71ef872-fd57-4dea-8781-53bd5b4d1a7d.png" alt="Everit logo" height="42" width="42" style:"float: right">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 				</a>
 			</div>
  			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
