--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -1,10 +1,65 @@
+<style type="text/css">
+	.rowHeader {
+        background-color:#E2E2E2;
+    }
+    .rowAlter {
+        background-color:#F2F2F2;
+    }
+    .button {
+        padding: 2px;
+    }
+    .grid {
+        font-family:Arial,Helvetica,sans-serif;
+        font-size:12px;
+        background-color:#FCFCFC;
+        border:1px solid #D2D2D2;
+        border-collapse:collapse;
+    }
+    .grid th, .grid td {
+        border:1px solid #D2D2D2;
+        padding:4px;
+    }
+    .content {
+		margin: 0 .714em .714em;
+		position: relative;
+	}
+    .rounded {
+		background-color: #fff;
+		border: 1px solid #bbb;
+		-moz-border-radius: .4em;
+		-webkit-border-radius: .4em;
+		border-radius: .4em;
+	}
+    .item-header {
+		margin: 12px 12px 0 12px;
+		min-height: 48px;
+		position: relative;
+		padding-left: 5px;
+		padding-right: 5px;
+		padding-top: 0px;
+	}
+	#main-content {
+		min-width: 990px;
+	}
+	.item-header .item-summary {
+		font-size: 2em;
+		line-height: 1.167;
+		margin: 0;
+	}
+    
+</style>
 <form name="adminSettingForm"  method="post" action="JiraTimetrackerAdminSettingsWebAction.jspa"/>   
-	<div id="plugin_head" class="item-header">
- 			<h1 class="item-summary">Timetracker Global Settings</h1>
+	<div id="plugin_head" class="item-header" style="width:980px;">
+ 			<div style="float: right;">
+				<a href="http://www.everit.org/components.html#jira" target="_blank">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+				</a>
+			</div>
+ 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker Global Settings</h1>
   	</div>
-  	<div id="main-content" class="content rounded" >
-		<div style="margin:10px; ">
-			<table  width="80%" padding:"5px" >
+  	<div id="main-content" class="content rounded" style="width:970px;">
+		<div style="margin:10px; width:970px;">
+			<table  width="100%" padding:"5px" >
 				<tbody>
 					<tr>
 						<td style="text-align: right; vertical-align: top;" width="15%">
@@ -135,6 +190,18 @@
 									$i18n.getText("plugin.setting.include.dates.help")
 							</div>
 						</td>		
+					</tr>
+					<tr>
+						<td style="text-align: right; vertical-align: top;" width="15%">
+							<div style="margin-bottom: 10px; margin-top: 20px;">
+								<h3>$i18n.getText("plugin.setting.calendar")</h3>
+							</div>	
+						</td>
+						<td>
+							<div class="description" style="margin-top: 20px;">
+										$i18n.getText("plugin.setting.calendar.settings.help")
+							</div>
+						</td>	
 					</tr>
 					<tr>
 						<td style="text-align: right;  vertical-align: top;" width="15%">
