--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -1,247 +1,227 @@
 ## Style Declaration
 <style type="text/css">
-	. grid td {
-		text-align: center;
-		vertical-align: inherit;
-	}
-	.rowHeader {
-        background-color:#E2E2E2;
-    }
-    .rowAlter {
-        background-color:#F2F2F2;
-    }
-    .button {
-        padding: 2px;
-    }
-    .grid {
-        font-family:Arial,Helvetica,sans-serif;
-        font-size:12px;
-        background-color:#FCFCFC;
-        border:1px solid #D2D2D2;
-        border-collapse:collapse;
-    }
-    .grid th, .grid td {
-        border:1px solid #D2D2D2;
-        padding:4px;
-    }
-    
-    .content {
-		margin: 0 .714em .714em;
-		position: relative;
-	}
-    .rounded {
-		background-color: #fff;
-		border: 1px solid #bbb;
-		-moz-border-radius: .4em;
-		-webkit-border-radius: .4em;
-		border-radius: .4em;
-	}
-    .item-header {
-		margin: 12px 12px 0 12px;
-		min-height: 48px;
-		position: relative;
-		padding-left: 5px;
-		padding-right: 5px;
-		padding-top: 0px;
-	}
-	#main-content {
-		min-width: 990px;
-	}
-	.item-header .item-summary {
-		font-size: 2em;
-		line-height: 1.167;
-		margin: 0;
-	}
-   
+.grid td {
+	text-align: center;
+	vertical-align: inherit;
+}
+
+.rowHeader {
+	background-color: #E2E2E2;
+}
+
+.rowAlter {
+	background-color: #F2F2F2;
+}
+
+.button {
+	padding: 2px;
+}
+
+.grid {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	background-color: #FCFCFC;
+	border: 1px solid #D2D2D2;
+	border-collapse: collapse;
+}
+
+.grid th, .grid td {
+	border: 1px solid #D2D2D2;
+	padding: 4px;
+}
+
+.content {
+	margin: 0 .714em .714em;
+	position: relative;
+}
+
+.rounded {
+	background-color: #fff;
+	border: 1px solid #bbb;
+	-moz-border-radius: .4em;
+	-webkit-border-radius: .4em;
+	border-radius: .4em;
+}
+
+.item-header {
+	margin: 12px 12px 0 12px;
+	min-height: 48px;
+	position: relative;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 0px;
+}
+
+#main-content {
+	min-width: 990px;
+}
+
+.item-header .item-summary {
+	font-size: 2em;
+	line-height: 1.167;
+	margin: 0;
+}
 </style>
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
-$webResourceManager.requireResource("jira.webresources:dwr", null)   
+$webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 
-<form name="myForm"  method="post" action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />   
+<form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
 	#set($rendererType = "atlassian-wiki-renderer")
-	<div id="plugin_head" class="item-header" style="width:980px;">
-			<div style="float: right;">
-				<a href="http://www.everit.org/components.html#jira" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
-				</a>
-			</div>
- 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
-  	</div>
-	<div id="main-content" class="content rounded" style="width:970px;">
-		<div style="margin:10px; width:970px;">
-			##TAB START
-			<div class="tabwrap tabs2" id="tabs-jttp">
-	    		<ul class="tabs horizontal">
-	        		<li>
-	            		<a href="JiraTimetarckerWebAction!default.jspa"><strong>Timetracker</strong></a>
-	        		</li>
-	        		<li class="active">
-	            		<a href="JiraTimetrackerWorklogsWebAction!default.jspa"><strong>Missing Days Report</strong></a>
-	        		</li>
-	        		<li>
-	            		<a href="JiraTimetrackerChartWebAction!default.jspa"><strong>Chart Report</strong></a>
-	        		</li>
-	    		</ul>
-	    	</div>
-			##TAB END
-			<div id="message" style="color: red; padding-bottom: 5px;">
-		 			$i18n.getText($message) $messageParameter
-		  	</div>
-			<div id="calendar_div" style="text-align: left; vertical-align: inherit; float: left; padding:5px;">
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								$i18n.getText("plugin.from")
-								<input type="text" id="dateFrom" name="dateFrom" tabindex="1" onkeydown="return checkFromEnter(event);" value="$dateFromFormated"/>
-								 <script>
-						            function checkFromEnter(event){
-									    if (event.keyCode == 13) {
-									      AJS.$("#dateTo").focus();
-									      return false;
-									    }
-									}
-						          </script>
-								<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
-									alt="Pick a date"/>
-								<script>
-								var cal= Calendar.setup({
+	<div id="plugin_head" class="item-header" style="width: 980px;">
+	  <div style="float: right;">
+	    <a href="http://www.everit.org/components.html#jira" target="_blank"> <img
+	      src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png"
+	      alt="Everit logo" height="42" width="42"style:"float:right"></a>
+	  </div>
+	  <h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+	</div>
+	<div id="main-content" class="content rounded" style="width: 970px;">
+	  <div style="margin: 10px; width: 970px;">
+	    ##TAB START
+	    <div class="tabwrap tabs2" id="tabs-jttp">
+	      <ul class="tabs horizontal">
+	        <li><a href="JiraTimetarckerWebAction!default.jspa"><strong>Timetracker</strong></a></li>
+	        <li class="active"><a href="JiraTimetrackerWorklogsWebAction!default.jspa"><strong>Missing Days Report</strong></a></li>
+	        <li><a href="JiraTimetrackerChartWebAction!default.jspa"><strong>Chart Report</strong></a></li>
+	      </ul>
+	    </div>
+	    ##TAB END
+	    <div id="message" style="color: red; padding-bottom: 5px;">$i18n.getText($message) $messageParameter</div>
+	    <div id="calendar_div" style="text-align: left; vertical-align: inherit; float: left; padding: 5px;">
+	      <table>
+	        <tbody>
+	          <tr>
+	            <td>$i18n.getText("plugin.from") <input type="text" id="dateFrom" name="dateFrom" tabindex="1"
+	              onkeydown="return checkFromEnter(event);" value="$dateFromFormated" /> 
+	              <script>
+					function checkFromEnter(event) {
+						if (event.keyCode == 13) {
+						AJS.$("#dateTo").focus();
+						return false;
+						}
+					}
+					</script> 
+					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" /> 
+					<script>
+						var cal = Calendar
+								.setup({
 									firstDay : 0,
 									inputField : 'dateFrom',
 									button : 'date_trigger_from',
 									date : '$dateFromFormated',
 									align : 'Br',
-									electric: false,
+									electric : false,
 									singleClick : true,
-									showOthers: true,
+									showOthers : true,
 									useISO8601WeekNumbers : false,
 									ifFormat : '%Y-%m-%d'
 								});
-								</script>
-							</td>
-							<td>
-								$i18n.getText("plugin.to")
-								<input type="text" id="dateTo" name="dateTo" tabindex="2" onkeydown="return checkToEnter(event);" value="$dateToFormated"/>
-								 <script>
-						            function checkToEnter(event){
-									    if (event.keyCode == 13) {
-									      AJS.$("#search").click();
-									      return false;
-									    }
-									}
-						          </script>
-								<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
-									alt="Pick a date"/>
-								<script>
-								var cal= Calendar.setup({
-									firstDay : 0,
-									inputField : 'dateTo',
-									button : 'date_trigger_to',
-									date : '$dateToFormated',
-									align : 'Br',
-									electric: false,
-									singleClick : true,
-									showOthers: true,
-									useISO8601WeekNumbers : false,
-									ifFormat : '%Y-%m-%d'
-								});
-								</script>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<table>
-					<tbody>	
-						<tr>
-							<td>
-								<input id="hour" type="checkbox" value="check 8 h" name="hour" #if($checkHours) checked #end/>
-							</td>
-							<td>
-								$i18n.getText("plugin.missing.days.hours")
-							</td>
-						</tr>
-						<tr>
-							<td>		
-								<input id="nonworking" type="checkbox" value="non-working not count" name="nonworking" #if($checkNonWorkingIssues) checked #end/>
-								<script>
-									function setcheckworkedhours() {
-											if(AJS.$("#hour").is(":checked")){
-												document.getElementById("nonworking").disabled= false;
-											}else{
-												document.getElementById("nonworking").disabled= true;
-											}
-					               	};
-					               	
-					               	AJS.$("#hour").click(function(){
-					               		setcheckworkedhours();
-					               	});
-					               	
-					               	window.onload = function() {
-					               		setcheckworkedhours();
-					               	};
-								</script>
-							</td>
-							<td>
-								$i18n.getText("plugin.missing.days.nonworking")
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input id="search"  tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')" class="button" />
-							</td>
-						</tr>
-					</tbody>
-				</table>	
-			</div>
-			<style type="text/css">
-			{
-				margin-bottom: 0em;
-			}
-			</style>
-			<div id="statistics-message" style="width: 30%; padding-bottom: 5px;">
-		 			$i18n.getText("plugin.statistics.message") $statisticsMessageParameter
-		  	</div>
-			#set($rowCount = 0)
-			<div class="results-wrap">
-				<div>
-				    <table class="grid" border="0" cellpadding="2" cellspacing="0" width="30%" style="text-align: center; padding-bottom: 5px;">
-				           <thead>
-				              <tr class="rowHeader">
-				                  <td width="5%">
-				                       $i18n.getText("plugin.dates")
-				                   </td>
-			                   </tr>
-			                </thead>
-			                #if($showDatesWhereNoWorklog.size() == 0)
-			            		</table>
-			            			<div id="message" style="text-align: center; padding: 3px; font-size: 14px; width: 30%;" >
-							 			$i18n.getText("plugin.no.dates")
-								  	</div>
-			                #else
-			                	   	<tbody>
-					                   	#foreach ($date in $showDatesWhereNoWorklog)
-					                    	<tr #if($rowCount % 2 != 0) class="rowAlter" #end>
-					                    	 	<td>
-					                    	 		<a href="JiraTimetarckerWebAction.jspa?dateFormated=$date">$date</a>
-					                    	 	</td>
-					                    	</tr>
-					                    	#set($rowCount = $rowCount + 1)
-					                    #end
-					                </tbody>
-					            </table>
-					         #end
-					</div>
-			 </div>
-			 #if($showDatesWhereNoWorklog.size() != 0)
-				<div style="text-align: center; width: 30%; " >
-					<input type="submit" id="pageBack"  name="pageBack" value="<" class="button"  />
-					$actualPage / $numberOfPages
-					<input type="submit" id="pageNext"  name="pageNext" value=">"  class="button"/>
-				</div>
-			 #end
-		</div>	
+					</script>
+	            </td>
+	            <td>$i18n.getText("plugin.to") <input type="text" id="dateTo" name="dateTo" tabindex="2"
+	              onkeydown="return checkToEnter(event);" value="$dateToFormated" /> 
+	              <script>
+						function checkToEnter(event) {
+							if (event.keyCode == 13) {
+								AJS.$("#search").click();
+								return false;
+							}
+						}
+				</script> 
+				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" /> 
+	              <script>
+							var cal = Calendar
+									.setup({
+										firstDay : 0,
+										inputField : 'dateTo',
+										button : 'date_trigger_to',
+										date : '$dateToFormated',
+										align : 'Br',
+										electric : false,
+										singleClick : true,
+										showOthers : true,
+										useISO8601WeekNumbers : false,
+										ifFormat : '%Y-%m-%d'
+									});
+					</script>
+	            </td>
+	          </tr>
+	        </tbody>
+	      </table>
+	      <table>
+	        <tbody>
+	          <tr>
+	            <td><input id="hour" type="checkbox" value="check 8 h" name="hour" #if($checkHours) checked #end /></td>
+	            <td>$i18n.getText("plugin.missing.days.hours")</td>
+	          </tr>
+	          <tr>
+	            <td><input id="nonworking" type="checkbox" value="non-working not count" name="nonworking"
+	              #if($checkNonWorkingIssues) checked #end /> 
+	              <script>
+						function setcheckworkedhours() {
+							if (AJS.$("#hour").is(":checked")) {
+								document.getElementById("nonworking").disabled = false;
+							} else {
+								document.getElementById("nonworking").disabled = true;
+							}
+						};
+						AJS.$("#hour").click(function() {
+											setcheckworkedhours();
+										});
+						window.onload = function() {
+							setcheckworkedhours();
+						};
+					</script>
+				</td>
+	            <td>$i18n.getText("plugin.missing.days.nonworking")</td>
+	          </tr>
+	          <tr>
+	            <td><input id="search" tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')"
+	              class="button" /></td>
+	          </tr>
+	        </tbody>
+	      </table>
+	    </div>
+	    <style type="text/css">
+			{margin-bottom:0em;}
+		</style>
+	    <div id="statistics-message" style="width: 30%; padding-bottom: 5px;">
+	      $i18n.getText("plugin.statistics.message") $statisticsMessageParameter</div>
+	    #set($rowCount = 0)
+	    <div class="results-wrap">
+	      <div>
+	        <table class="grid" border="0" cellpadding="2" cellspacing="0" width="30%"
+	          style="text-align: center; padding-bottom: 5px;">
+	          <thead>
+	            <tr class="rowHeader">
+	              <td width="5%">$i18n.getText("plugin.dates")</td>
+	            </tr>
+	          </thead>
+	          #if($showDatesWhereNoWorklog.size() == 0)
+	        </table>
+	        <div id="message" style="text-align: center; padding: 3px; font-size: 14px; width: 30%;">
+	          $i18n.getText("plugin.no.dates")</div>
+	        #else
+	        <tbody>
+	          #foreach ($date in $showDatesWhereNoWorklog)
+	          <tr #if($rowCount % 2 !=0) class="rowAlter" #end>
+	            <td><a href="JiraTimetarckerWebAction.jspa?dateFormated=$date">$date</a></td>
+	          </tr>
+	          #set($rowCount = $rowCount + 1) #end
+	        </tbody>
+	        </table>
+	        #end
+	      </div>
+	    </div>
+	    #if($showDatesWhereNoWorklog.size() != 0)
+	    <div style="text-align: center; width: 30%;">
+	      <input type="submit" id="pageBack" name="pageBack" value="<" class="button" /> $actualPage / $numberOfPages <input
+	        type="submit" id="pageNext" name="pageNext" value=">" class="button" />
+	    </div>
+	    #end
+	  </div>
 	</div>
 </form>
