--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -1,3 +1,6 @@
+<html>
+<head>
+<title>Timetracker</title>
 ## Style Declaration
 <style type="text/css">
 .button {
@@ -31,12 +34,13 @@
 		margin: 0;
 	}
 </style>
+</head>
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)   
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
-
+<body>
 <form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
 	#set($rendererType = "atlassian-wiki-renderer")
 	<div id="plugin_head" class="item-header" style="width:980px;">
@@ -210,3 +214,5 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
         chart.draw(data, options);
       }
 </script>
+</body>
+</html>
